// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Feature /> renders the <Feature /> with just a sub-title 1`] = `
<div
  class="feature__Container-ox0cze-0 elDSWz"
>
  <h2
    class="feature__SubTitle-ox0cze-2 gDDOyg"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;

exports[`<Feature /> renders the <Feature /> with just a title 1`] = `
<div
  class="feature__Container-ox0cze-0 elDSWz"
>
  <h1
    class="feature__Title-ox0cze-1 eJMnrE"
  >
    Unlimited films, TV programmes and more.
  </h1>
</div>
`;

exports[`<Feature /> renders the <Feature /> with populated data 1`] = `
<div
  class="feature__Container-ox0cze-0 elDSWz"
>
  <h1
    class="feature__Title-ox0cze-1 eJMnrE"
  >
    Unlimited films, TV programmes and more.
  </h1>
  <h2
    class="feature__SubTitle-ox0cze-2 gDDOyg"
  >
    Watch anywhere. Cancel at any time.
  </h2>
</div>
`;
